--- a/UDPSearch/UDPSearch.css
+++ b/UDPSearch/UDPSearch.css
@@ -1,17 +1,27 @@
-.searchControl {
-  margin-left: -3px;
-  margin-top: 8px;
-  display: flex;
+@import "@folio/stripes-components/lib/variables";
 
-  &.marginBottom0 {
-    margin-bottom: 0;
-  }
-
-  &.marginTop0 {
-    margin-top: 0;
-  }
+.modalContent {
+  padding: 0;
+  position: relative;
+  min-height: 500px;
 }
 
-.udpSearchModal {
-  min-height: 400px;
+.searchGroupWrap {
+  margin-bottom: .5rem;
+}
+
+.searchField {
+  margin-bottom: calc(var(--control-margin-bottom) / 2);
+}
+
+/* reset button wrap - minor alignment adjustment */
+.resetButtonWrap {
+  & [disabled] :global .stripes__icon {
+    fill: rgba(0, 0, 0, 0.62);
+  }
+
+  &.resetButton {
+    border-color: rgba(0, 0, 0, 0.62);
+    color: rgba(0, 0, 0, 0.62);
+  }
 }
